--- a/index.html
+++ b/index.html
@@ -252,7 +252,10 @@
 
             <button type="submit">Calcular Ganancias</button>
         </form>
-        <div id="gananciasResultado"></div>
+<div id ="gananciasresultado"></div>
+        <button id="guardarGananciasBtn" style="display:none;" onclick="guardarRepartoDeGanancias()">Guardar Gasto</button>
+        
+
         <h3>Historial de Repartos</h3>
         <div id="historialGanancias"></div>
     </section>
