--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
             <button type="submit">Calcular Ganancias</button>
         </form>
-<div id ="gananciasresultado"></div>
+<div id ="gananciasResultado"></div>
         <button id="guardarGananciasBtn" style="display:none;" onclick="guardarRepartoDeGanancias()">Guardar Gasto</button>
         
 
