--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Control de Emprendimiento</title>
+    <title>BICHOVER!</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Agregar íconos de Google Fonts para mejorar la interfaz -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -14,7 +14,6 @@
     <!-- Barra de navegación -->
     <nav class="navbar">
         <img src="./Captura.PNG" alt="">
-        <h1>BichOver!</h1>
         <div id="user-info">
             <!-- Mostrar información del usuario autenticado -->
             <span id="user-username"></span>
@@ -72,6 +71,7 @@
                 <option value="nafta">Nafta</option>
                 <option value="peaje">Peaje</option>
                 <option value="otro">Otro</option>
+                <option value="transferencia">Transferencia</option>
             </select>
 
             <label for="monto">Monto:</label>
@@ -79,6 +79,14 @@
 
             <label for="razon">Razón:</label>
             <input type="text" id="razon" placeholder="Razón del gasto" required>
+
+            <div id="destinatarioSection" style="display:none;">
+                <label for="destinatario">Seleccionar destinatario:</label>
+                <select id="destinatario">
+                    <option value="Juan">Juan</option>
+                    <option value="Seba">Seba</option>
+                </select>
+            </div>
 
             <button type="submit">Registrar Gasto</button>
         </form>
@@ -133,7 +141,21 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody id="clientesBody"></tbody>
+            <tbody id="clientesBody">
+                <tr>
+                    <td data-label="Razón Social">Empresa XYZ</td>
+                    <td data-label="Localidad">Ciudad ABC</td>
+                    <td data-label="Dirección">Calle 123</td>
+                    <td data-label="Teléfono">123456789</td>
+                    <td data-label="Frascos Comprados">50</td>
+                    <td data-label="Fecha Última Compra">2024-09-30</td>
+                    <td data-label="Potencial">Alto</td>
+                    <td data-label="Acciones">
+                        <button class="btn-editar">Editar</button>
+                        <button class="btn-eliminar">Eliminar</button>
+                    </td>
+                </tr>
+            </tbody>
         </table>
     </section>
 
@@ -152,7 +174,19 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody id="clientesPotencialesBody"></tbody>
+            <tbody id="clientesPotencialesBody">
+                <tr>
+                    <td data-label="Razón Social">Empresa ABC</td>
+                    <td data-label="Localidad">Ciudad XYZ</td>
+                    <td data-label="Dirección">Calle 456</td>
+                    <td data-label="Teléfono">987654321</td>
+                    <td data-label="Frascos Verano 2024">100</td>
+                    <td data-label="Acciones">
+                        <button class="btn-editar">Editar</button>
+                        <button class="btn-eliminar">Eliminar</button>
+                    </td>
+                </tr>
+            </tbody>
         </table>
     </section>
 
@@ -187,7 +221,19 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody id="ventasBody"></tbody>
+            <tbody id="ventasBody">
+                <tr>
+                    <td data-label="Fecha">2024-09-30</td>
+                    <td data-label="Cliente">Cliente ABC</td>
+                    <td data-label="Cantidad de Frascos">25</td>
+                    <td data-label="Precio Total">$2500</td>
+                    <td data-label="Registrado por">Juan</td>
+                    <td data-label="Acciones">
+                        <button class="btn-editar">Editar</button>
+                        <button class="btn-eliminar">Eliminar</button>
+                    </td>
+                </tr>
+            </tbody>
         </table>
     </section>
 
@@ -204,6 +250,9 @@
             <button type="submit">Calcular Ganancias</button>
         </form>
         <div id="gananciasResultado"></div>
+        <button id="guardarGananciasBtn" style="display:none;" onclick="guardarRepartoDeGanancias()">Guardar
+            Reparto</button>
+
         <h3>Historial de Repartos</h3>
         <div id="historialGanancias"></div>
     </section>
@@ -242,7 +291,12 @@
                         <th>Stock de Frascos</th>
                     </tr>
                 </thead>
-                <tbody id="stockBody"></tbody>
+                <tbody id="stockBody">
+                    <tr>
+                        <td data-label="Usuario">Juan</td>
+                        <td data-label="Stock de Frascos">100</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </section>
@@ -259,9 +313,9 @@
         function showSection(sectionId) {
             const sections = document.querySelectorAll('.section');
             sections.forEach(section => {
-                section.style.display = 'none';  // Ocultar todas las secciones
+                section.style.display = 'none'; // Ocultar todas las secciones
             });
-            document.getElementById(sectionId).style.display = 'block';  // Mostrar la sección seleccionada
+            document.getElementById(sectionId).style.display = 'block'; // Mostrar la sección seleccionada
         }
 
         // Función para alternar entre el formulario de inicio de sesión y registro
@@ -275,7 +329,7 @@
                 loginSection.style.display = 'none';
                 registerSection.style.display = 'block';
             }
-        }
+        }   
     </script>
 
 </body>
