--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p id="total-gastos">$0</p>
                 </div>
                 <div class="dashboard-card">
-                    <h3>A cuantos clientes vendimos?</h3>
+                    <h3>A cuantos clientes le vendimos?</h3>
                     <p id="total-clientes">0</p>
                 </div>
                 <div class="dashboard-card">
