--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
     <main class="container">
 
         <!-- Sección de Resumen -->
-        <section id="resumen" class="section" style="display:none;">
+        <section id="resumen" class="section">
             <h2>Resumen General</h2>
             <div class="dashboard">
-                <div class="dashboard-card">
+                <div class="dashboard-card" id="total-ventas-card">
                     <h3>Ventas Totales</h3>
                     <p id="total-ventas">$0</p>
                 </div>
-                <div class="dashboard-card">
+                <div class="dashboard-card" id="total-gastos-card">
                     <h3>Gastos Totales</h3>
                     <p id="total-gastos">$0</p>
                 </div>
-                <div class="dashboard-card">
-                    <h3>A cuantos clientes le vendimos?</h3>
+                <div class="dashboard-card" id="total-clientes-card">
+                    <h3>¿A cuántos clientes le vendimos?</h3>
                     <p id="total-clientes">0</p>
                 </div>
-                <div class="dashboard-card">
+                <div class="dashboard-card" id="total-stock-card">
                     <h3>Stock Total</h3>
                     <p id="total-stock">0</p>
                 </div>
